fix astral chaos invisible link text bug

--- a/css/astral_chaos.css
+++ b/css/astral_chaos.css
@@ -1,3 +1,7 @@
+a, a:enabled, a:link, a:visited {
+  color: black;
+}
+
 body {
   background-color: rgb(10, 20, 50);
 }
